--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@types/d3": "^4.12.0",
+    "@types/lodash": "^4.14.88",
     "core-js": "^2.4.1",
+    "d3": "^4.12.0",
+    "d3-selection-multi": "^1.0.1",
+    "lodash": "^4.17.4",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -32,6 +37,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/topojson": "^3.0.2",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
